package Decorator;

public class Component {
    String Operation() {
        return null;
    }
}
