package Decorator;

public class ConcreteComponent extends Component {
    @Override
    String Operation() {
        return "Component ";
    }
}
