@startuml

title __DECORATOR's Class Diagram__\n

  namespace Decorator {
    class Decorator.Component {
        ~ Operation()
    }
  }
  

  namespace Decorator {
    class Decorator.ConcreteComponent {
        ~ Operation()
    }
  }
  

  namespace Decorator {
    class Decorator.ConcreteDecoratorA {
        + ConcreteDecoratorA()
        ~ AddedBehavior()
        ~ Operation()
    }
  }
  

  namespace Decorator {
    class Decorator.ConcreteDecoratorB {
        + ConcreteDecoratorB()
        ~ AddedBehavior()
        ~ Operation()
    }
  }
  

  namespace Decorator {
    class Decorator.Decorator {
        + Decorator()
        ~ Operation()
    }
  }
  

  namespace Decorator {
    class Decorator.DecoratorMain {
        {static} + main()
    }
  }
  

  Decorator.ConcreteComponent -up-|> Decorator.Component
  Decorator.ConcreteDecoratorA -up-|> Decorator.Decorator
  Decorator.ConcreteDecoratorB -up-|> Decorator.Decorator
  Decorator.Decorator -up-|> Decorator.Component
  Decorator.Decorator o-- Decorator.Component : component


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
